Ajustando o Deployment no conceito do Argo Rollouts

--- a/canary/app-k8s/k8s/deployment.yaml
+++ b/canary/app-k8s/k8s/deployment.yaml
@@ -28,3 +28,8 @@ spec:
               limits:
                 cpu: "200m"
                 memory: "256Mi"
+    strategy:
+      blueGreen:
+        autoPromotionEnabled: false
+        activeService: app-k8s-svc
+        previewService: app-k8s-preview
