--- a/canary/app-k8s/k8s/service.yaml
+++ b/canary/app-k8s/k8s/service.yaml
@@ -11,3 +11,18 @@ spec:
   ports:
     - port: 80
       targetPort: 3000
+
+---
+apiVersion: v1
+kind: Service
+
+metadata:
+  name: app-k8s-preview
+
+spec:
+  type: ClusterIP
+  selector: 
+    app: app-k8s
+  ports:
+    - port: 80
+      targetPort: 3000
