--- a/canary/app-k8s/k8s/deployment.yaml
+++ b/canary/app-k8s/k8s/deployment.yaml
@@ -18,7 +18,7 @@ spec:
       spec:
         containers:
           - name: app-k8s
-            image: danielrodriguess/app-k8s:v3
+            image: danielrodriguess/app-k8s:v4
             imagePullPolicy: IfNotPresent
             ports:
               - containerPort: 3000
@@ -37,7 +37,7 @@ spec:
       canary:
         steps:
           - setWeight: 20
-          - pause: {}
+          - pause: { duration: 10 }
           - setWeight: 30
           - pause: { duration: 30 }
           - setWeight: 50
